# soctalk

./: .env.example  .envrc  .gitignore  .importlinter  CONTRIBUTING.md  Dockerfile  Dockerfile.adapter  Dockerfile.app  Dockerfile.frontend  Dockerfile.orchestrator  LICENSE  NOTICE  README.md  docker-compose-nix.yml  docker-compose.k3d.yml  docker-compose.override.yml  docker-compose.yml  flake.nix  install.ps1  install.sh  justfile  llms.txt  pyproject.toml
.github/workflows/: build-packer-images.yml  cut-k8s-release.yml  deploy-demo.yml  launchpad-release.yml  packages.yml  publish-images.yml  v1-ci.yml
alembic/: env.py
alembic/versions/: a11c9ed4a018_v1_native_ir_consolidated.py  a1a451de05a1_merge_authored_playbook_active_.py  add_llm_settings_to_user_settings.py  ce989e482ad9_v1_add_auth_models.py  v1_0001_multi_tenancy.py  (+39 more)
bench/: .gitignore  README.md  goldens_to_triage.py  run_bench.py  run_combos.py  run_concurrency.py  run_hosted.py  run_locales.py  runpod_bench.py  triage_time.py
deploy/: demo-values.yaml
dev/: values.local.yaml
docs/: chat-interface-plan.md  correlation-design-v3.md  engagement-reasoning-context-design.md  launchpad-design-draft.md  mssp-chat-plan.md  mssp-pilot-tutorial-plan.md  triage-policies.md
evals/: correlation_pairs.yaml  golden_alerts.es.yaml  golden_alerts.pt.yaml  golden_alerts.yaml  golden_alerts.zh.yaml  golden_authorization.yaml  golden_i18n.py  nessus_masking_test.py  nessus_replay.py  nessus_triage_verdict.py
examples/: README.md
frontend/: package.json  playwright.5273.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
launchpad/: README.md
packaging/: nfpm.yaml  postinstall.sh  soctalk  soctalk.env.example
scripts/: dev-down.sh  dev-up.sh  dump_openapi.py  e2e-l1-l2-k3d.sh  gen-attack-lookup.py  k3d-local.yaml  k3d-wazuh-forward.sh  local-down.sh  local-up.sh  make_golden_authorization.py  pg-bootstrap-roles.sql  run-dev.sh  seed-mssp-demo-data.py  verify-pages-visual.py  wait-for-pg.sh
setup-wizard/: auth.go  cert.go  errors_test.go  go.mod  handlers.go  install.go  main.go
tests/: conftest.py  test_projector.py
(+514 files in other folders)
