[project]
name = "soctalk"
version = "0.1.0"
description = "SecOps LLM Agent using LangGraph with Wazuh, Cortex, and TheHive integration via MCP"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Gianluca Brigandi"}
]
keywords = ["secops", "siem", "langgraph", "mcp", "security", "incident-response"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # V1 additions (codex P1-7):
    "prometheus-client>=0.20.0",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0",
    # Internal auth (P1-1):
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
slack = [
    "slack-bolt>=1.18.0",
]
discord = [
    "discord.py>=2.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "import-linter>=2.0",
    "httpx>=0.27.0",         # TestClient dep for FastAPI unit tests
]

[project.scripts]
soctalk = "soctalk.main:main"
soctalk-auth = "soctalk.core.cli.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soctalk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring PostgreSQL (deselect with '-m \"not integration\"')",
]
asyncio_default_fixture_loop_scope = "function"
